update design page

--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -1051,9 +1051,9 @@ ul.round-thumbs {
       #painting .painting-img-container .painting-img-row:hover .painting-img-overlay .painting-img-overlay-content {
         opacity: 1; }
 
-#contact .contact-title {
+#design-02 .contact-title {
   text-align: right; }
-#contact .row {
+#design-02 .row {
   position: relative; }
 
 .left-column, .right-column, .middle-offset {
