--- a/personal-website/css/main.scss
+++ b/personal-website/css/main.scss
@@ -1206,8 +1206,8 @@ rect.rect{
 }
 
 
-//contact page
-#contact{
+//design page
+#design-02{
 	//background-image: url('../img/blue-bg.png');
 	.contact-title{
 		text-align: right;
