--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -16,7 +16,6 @@ body {
   background-image: url("../img/lightpaperfibers.png"); }
 
 section {
-  border: 1px solid red;
   height: 100vh;
   overflow: hidden;
   position: relative; }
@@ -356,7 +355,7 @@ rect.rect {
 }
 */
 #skills {
-  height: 85vh; }
+  height: 95vh; }
 
 #skills:before {
   content: "";
@@ -386,7 +385,7 @@ rect.rect {
   max-width: 75em;
   position: absolute;
   display: block;
-  bottom: 15%;
+  bottom: 20%;
   left: 0;
   right: 0;
   margin-left: auto;
@@ -657,71 +656,70 @@ rect.rect {
     -o-transform: translateY(50px);
     -ms-transform: translateY(50px); }
 
-#photography {
-  height: auto; }
-  #photography ul.photo-thumbs {
-    padding: 0;
+#photography ul.photo-thumbs {
+  padding: 0;
+  max-height: 40em;
+  overflow: auto; }
+  #photography ul.photo-thumbs li {
+    min-height: 9.375em;
+    list-style: none;
+    padding: .1em;
+    float: left;
     position: relative; }
-    #photography ul.photo-thumbs li {
-      min-height: 9.375em;
-      list-style: none;
-      padding: .1em;
-      float: left;
-      position: relative; }
-      #photography ul.photo-thumbs li:nth-child(odd) div {
-        background: rgba(109, 207, 246, 0.8); }
-      #photography ul.photo-thumbs li:nth-child(even) div {
-        background: rgba(255, 245, 104, 0.8); }
-        #photography ul.photo-thumbs li:nth-child(even) div span {
-          color: rgba(84, 88, 99, 0.9);
-          border: 3px solid rgba(84, 88, 99, 0.5); }
-      #photography ul.photo-thumbs li a {
+    #photography ul.photo-thumbs li:nth-child(odd) div {
+      background: rgba(109, 207, 246, 0.8); }
+    #photography ul.photo-thumbs li:nth-child(even) div {
+      background: rgba(255, 245, 104, 0.8); }
+      #photography ul.photo-thumbs li:nth-child(even) div span {
+        color: rgba(84, 88, 99, 0.9);
+        border: 3px solid rgba(84, 88, 99, 0.5); }
+    #photography ul.photo-thumbs li a {
+      display: block;
+      position: relative;
+      overflow: hidden; }
+      #photography ul.photo-thumbs li a img {
         display: block;
         position: relative;
-        overflow: hidden; }
-        #photography ul.photo-thumbs li a img {
+        width: 100%;
+        height: 100%;
+        max-width: 15.625em;
+        opacity: 0.7;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 70 ")";
+        filter: alpha(opacity=70);
+        zoom: 1;
+        transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out; }
+      #photography ul.photo-thumbs li a div {
+        position: absolute;
+        background: #fff568;
+        width: 100%;
+        height: 100%;
+        max-width: 15.625em;
+        transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        top: 0;
+        left: -100%; }
+        #photography ul.photo-thumbs li a div span {
           display: block;
-          position: relative;
-          width: 100%;
-          height: 100%;
-          max-width: 15.625em;
-          opacity: 0.7;
-          -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 70 ")";
-          filter: alpha(opacity=70);
-          zoom: 1;
-          transition: all 0.3s ease-in-out;
-          -webkit-transition: all 0.3s ease-in-out;
-          -moz-transition: all 0.3s ease-in-out;
-          -o-transition: all 0.3s ease-in-out;
-          -ms-transition: all 0.3s ease-in-out; }
-        #photography ul.photo-thumbs li a div {
-          position: absolute;
-          background: #fff568;
-          width: 100%;
-          height: 100%;
-          max-width: 15.625em;
-          transition: all 0.3s ease-in-out;
-          -webkit-transition: all 0.3s ease-in-out;
-          -moz-transition: all 0.3s ease-in-out;
-          -o-transition: all 0.3s ease-in-out;
-          -ms-transition: all 0.3s ease-in-out;
-          top: 0;
-          left: -100%; }
-          #photography ul.photo-thumbs li a div span {
-            display: block;
-            padding: 0.625em;
-            margin: 2.5em 1.25em 1.25em 1.25em;
-            text-transform: uppercase;
-            color: rgba(255, 255, 255, 0.9);
-            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-            border: 3px solid rgba(255, 255, 255, 0.5); }
-        #photography ul.photo-thumbs li a:hover img {
-          opacity: 1;
-          -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 100 ")";
-          filter: alpha(opacity=100);
-          zoom: 1; }
-        #photography ul.photo-thumbs li a:hover div {
-          left: 0; }
+          padding: 0.625em;
+          margin: 2.5em 1.25em 1.25em 1.25em;
+          text-transform: uppercase;
+          color: rgba(255, 255, 255, 0.9);
+          text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+          border: 3px solid rgba(255, 255, 255, 0.5); }
+      #photography ul.photo-thumbs li a:hover img {
+        opacity: 1;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 100 ")";
+        filter: alpha(opacity=100);
+        zoom: 1; }
+      #photography ul.photo-thumbs li a:hover div {
+        left: 0; }
 
 .clearfix:after {
   visibility: hidden;
@@ -739,11 +737,6 @@ rect.rect {
   zoom: 1; }
 
 /* IE7 */
-#design {
-  background-image: url("../img/yellow-bg.png"); }
-  #design .row.design-thumbs-container {
-    margin-top: -1em; }
-
 ul.round-thumbs {
   padding-left: 0;
   position: relative;
@@ -835,19 +828,21 @@ ul.round-thumbs {
             -o-transition: all 0.3s ease;
             -ms-transition: all 0.3s ease; }
         ul.round-thumbs li .design-item .design-info h3 {
+          font-size: 1em;
           color: #fff;
           text-transform: uppercase;
           position: relative;
           letter-spacing: 0.125em;
-          margin: 2.1875em 2.5em 0.625em 2.5em;
+          margin: 1.5625em 1.875em 0.3125em 1.875em;
           padding: 0.9375em 0 0 0;
-          height: 5.625em; }
+          min-height: 5.625em; }
         ul.round-thumbs li .design-item .design-info p {
           position: relative;
+          font-size: .9em;
           color: #fff;
           padding: 0.3em;
           font-style: italic;
-          margin: 0 1.875em;
+          margin: 0.5em 1.875em;
           border-top: 1px solid rgba(255, 255, 255, 0.5); }
       ul.round-thumbs li .design-item .design-img-1 {
         background-image: url(../img/thumb/design-01.jpg);
@@ -871,11 +866,11 @@ ul.round-thumbs {
         box-shadow: 0 0 0 rgba(109, 207, 246, 0.6); }
         ul.round-thumbs li .design-item:hover .design-thumb {
           box-shadow: inset 0 0 0 15px rgba(255, 255, 255, 0.5) 0 1px 3px rgba(0, 0, 0, 0.2);
-          transform: rotate(-110deg);
-          -webkit-transform: rotate(-110deg);
-          -moz-transform: rotate(-110deg);
-          -o-transform: rotate(-110deg);
-          -ms-transform: rotate(-110deg); }
+          transform: rotate(-130deg);
+          -webkit-transform: rotate(-130deg);
+          -moz-transform: rotate(-130deg);
+          -o-transform: rotate(-130deg);
+          -ms-transform: rotate(-130deg); }
 
 .md-modal {
   position: fixed;
@@ -999,8 +994,6 @@ ul.round-thumbs {
 #painting .painting-img-container {
   text-align: center; }
   #painting .painting-img-container .painting-img-row {
-    float: left;
-    margin: 1.618em;
     display: inline-block;
     position: relative; }
     #painting .painting-img-container .painting-img-row:nth-child(odd) img, #painting .painting-img-container .painting-img-row:nth-child(odd) .painting-img-overlay {
@@ -1012,8 +1005,8 @@ ul.round-thumbs {
     #painting .painting-img-container .painting-img-row:nth-child(even) .painting-img-overlay .painting-img-overlay-content {
       top: 40%; }
     #painting .painting-img-container .painting-img-row img {
-      width: 240px;
-      height: 388.33px; }
+      width: 180px;
+      height: 291.244px; }
     #painting .painting-img-container .painting-img-row .painting-img-overlay {
       background: rgba(255, 255, 255, 0.3);
       position: absolute;
@@ -1051,18 +1044,25 @@ ul.round-thumbs {
       #painting .painting-img-container .painting-img-row:hover .painting-img-overlay .painting-img-overlay-content {
         opacity: 1; }
 
-#design-02 .contact-title {
-  text-align: right; }
-#design-02 .row {
-  position: relative; }
+#design .title {
+  margin-top: 7rem; }
+
+#painting .painting-title {
+  margin-top: 17rem; }
 
 .left-column, .right-column, .middle-offset {
   height: 100vh; }
 
-.left-column {
-  position: relative; }
-  .left-column h2 {
-    margin-top: 7rem; }
-
-.right-column, .middle-offset {
+.float-left {
   background-image: url("../img/yellow-bg.png"); }
+  .float-left .title {
+    text-align: right; }
+  .float-left .left-column {
+    background-image: url("../img/lightpaperfibers.png"); }
+
+.float-right {
+  background-image: url("../img/blue-bg.png"); }
+  .float-right .right-column {
+    background-image: url("../img/lightpaperfibers.png"); }
+  .float-right .title {
+    text-align: left; }
